--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="flex-container">
             <section>
                 <h2>1</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde at aspernatur eligendi deserunt fuga libero earum ipsam omnis nostrum voluptatem, a facilis provident. Nesciunt, iste pariatur iusto qui provident mollitia?</p>
             </section>
             <section>
                 <h2>2</h2>
